# MultiCameraStereoCalib

./: .gitignore  MultiCamera.spec  pyproject.toml
.github/workflows/: build-windows.yml
docs/: TECHNICAL_DOCUMENTATION.md
packaging/windows/: MultiCamera.iss
scripts/: build_windows.bat  build_windows_installer.bat  test_offline_calib.py
src/multicamera/: __main__.py  logging_config.py  perf.py  runtime_paths.py
src/multicamera/board/: charuco_board.py  detector.py
src/multicamera/calibration/: assessment.py  auxiliary.py  intrinsic.py  models.py  multiview.py  planar.py  stereo.py
src/multicamera/fusion/: fusion.py  pointcloud.py  stereo_matching.py
src/multicamera/io/: export.py  session.py
src/multicamera/streaming/: discovery.py  mjpeg_grabber.py  stream_manager.py
src/multicamera/ui/: main_window.py  opencv_unicode_text.py  theme.py
src/multicamera/ui/threads/: calibration_worker.py  import_worker.py  save_worker.py
src/multicamera/ui/widgets/: calib_panel.py  capture_guide.py  cloud_viewer.py  config_dialog.py  stream_view.py
